--- a/attendance.html
+++ b/attendance.html
@@ -5,84 +5,103 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>الحضور والغياب - المعهد</title>
 <style>
-body { font-family:'Cairo',sans-serif; margin:0; padding:20px; background:#f5f9ff; color:#102027; visibility:hidden; }
-header { padding:20px; text-align:center; font-size:20px; font-weight:bold; display:flex; align-items:center; justify-content:center; gap:12px; }
-header img { height:50px; }
-.wrap{max-width:1200px;margin:20px auto;}
-.card{background:#fff;border-radius:10px;padding:14px;margin-bottom:16px;box-shadow:0 6px 18px rgba(6,20,30,0.06);}
-label{display:block;margin:6px 0 4px;font-size:13px;color:#37474f;}
-select, input[type=date]{width:100%;padding:10px;border:1px solid #d6dde9;border-radius:8px;margin-bottom:8px;font-size:15px;}
-table{width:100%;border-collapse:collapse;margin-top:12px;}
-th,td{padding:10px;border:1px solid #eee;text-align:center;font-size:14px;}
-th{background:#004aad;color:#fff;}
-.btn{background:#004aad;color:#fff;padding:8px 14px;border:none;border-radius:8px;cursor:pointer;font-weight:700;}
-.btn.warn{background:#ff7043;}
-@media print{
-  body{background:white;}
-  header,.filters,.actions,.btn{display:none !important;}
-  table{page-break-inside:avoid;}
+body {
+  font-family:'Cairo',sans-serif;
+  background:#f5f9ff;
+  color:#102027;
+  padding:20px;
+  visibility:hidden;
 }
-.status-select{padding:6px;border-radius:6px;border:1px solid #ccc;}
+header {
+  display:flex;
+  align-items:center;
+  gap:12px;
+  padding:16px;
+  border-radius:8px;
+  margin-bottom:20px;
+}
+header img {
+  height:50px;
+}
+header h1 {
+  font-size:24px;
+  margin:0;
+}
+.card {
+  background:#fff;
+  border-radius:10px;
+  padding:14px;
+  margin-bottom:16px;
+  box-shadow:0 6px 18px rgba(6,20,30,0.06);
+}
+select, input, button {
+  padding:10px;
+  border-radius:8px;
+  border:1px solid #d6dde9;
+  font-size:15px;
+  margin-bottom:8px;
+  width:100%;
+}
+button {
+  background:#004aad;
+  color:#fff;
+  cursor:pointer;
+  font-weight:700;
+}
+button:hover { background:#003a8c; }
+table {
+  width:100%;
+  border-collapse:collapse;
+  margin-top:12px;
+}
+th,td {
+  padding:10px;
+  border:1px solid #eee;
+  text-align:center;
+}
+th { background:#004aad; color:#fff; }
+.status-present { background:#c8e6c9; }
+.status-absent { background:#ffcdd2; }
+.status-late { background:#fff9c4; }
+
+@media print {
+  body{background:white;}
+  .card, button, select, input { display:none; }
+  table { page-break-inside:avoid; }
+}
 </style>
 </head>
 <body>
 
 <header>
   <img id="instituteLogo" src="" alt="شعار المعهد">
-  <span id="instituteName">اسم المعهد</span>
+  <h1 id="instituteName">المعهد</h1>
 </header>
 
-<div class="wrap">
+<div class="card">
+  <strong>اختر الحصة لتسجيل الحضور</strong>
+  <select id="classSelect"></select>
+  <button id="printBtn">🖨️ طباعة</button>
+</div>
 
-  <div class="card filters">
-    <strong>فلترة الحصص</strong>
-    <label>المادة</label>
-    <select id="filterSubject"><option value="">الكل</option></select>
-    <label>الأستاذ</label>
-    <select id="filterTeacher"><option value="">الكل</option></select>
-    <label>المجموعة</label>
-    <select id="filterGroup"><option value="">الكل</option></select>
-    <label>اليوم</label>
-    <select id="filterDay">
-      <option value="">الكل</option>
-      <option value="الاثنين">الاثنين</option>
-      <option value="الثلاثاء">الثلاثاء</option>
-      <option value="الأربعاء">الأربعاء</option>
-      <option value="الخميس">الخميس</option>
-      <option value="الجمعة">الجمعة</option>
-      <option value="السبت">السبت</option>
-      <option value="الأحد">الأحد</option>
-    </select>
-    <button id="filterBtn" class="btn" style="margin-top:8px;">تطبيق الفلتر</button>
-    <button id="printBtn" class="btn" style="margin-top:8px;">طباعة التقرير</button>
-  </div>
-
-  <div class="card">
-    <strong>قائمة الحصص والطلاب</strong>
-    <table id="attendanceTable">
-      <thead>
-        <tr>
-          <th>المادة</th>
-          <th>الأستاذ</th>
-          <th>المجموعة</th>
-          <th>اليوم</th>
-          <th>وقت البداية</th>
-          <th>وقت النهاية</th>
-          <th>الطلاب</th>
-        </tr>
-      </thead>
-      <tbody></tbody>
-    </table>
-  </div>
-
+<div class="card">
+  <table id="attendanceTable">
+    <thead>
+      <tr>
+        <th>اسم الطالب</th>
+        <th>الحالة</th>
+      </tr>
+    </thead>
+    <tbody></tbody>
+  </table>
+  <button id="saveBtn">💾 حفظ الحضور</button>
 </div>
 
 <script type="module">
 import { initializeApp } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-app.js";
+import { getFirestore, collection, doc, getDoc, getDocs, setDoc } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-firestore.js";
 import { getAuth, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-auth.js";
-import { getFirestore, collection, getDocs, doc, updateDoc } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-firestore.js";
 
-// 🔹 إعداد Firebase
 const firebaseConfig = {
   apiKey: "AIzaSyAMANgdrLgoGIjqLZOcS_qyEqCUOVC7gOU",
   authDomain: "oma0-33cc0.firebaseapp.com",
@@ -92,153 +111,94 @@ const firebaseConfig = {
   appId: "1:899300774863:web:0a81a7f5747ef37d49b8ba",
   measurementId: "G-5CKWYQT9XZ"
 };
-
 const app = initializeApp(firebaseConfig);
-const auth = getAuth(app);
 const db = getFirestore(app);
+const auth = getAuth(app);
 
-const filterSubject = document.getElementById("filterSubject");
-const filterTeacher = document.getElementById("filterTeacher");
-const filterGroup = document.getElementById("filterGroup");
-const filterDay = document.getElementById("filterDay");
-const filterBtn = document.getElementById("filterBtn");
+const instituteLogo = document.getElementById("instituteLogo");
+const instituteName = document.getElementById("instituteName");
+const classSelect = document.getElementById("classSelect");
+const attendanceTableBody = document.querySelector("#attendanceTable tbody");
+const saveBtn = document.getElementById("saveBtn");
 const printBtn = document.getElementById("printBtn");
-const tableBody = document.querySelector("#attendanceTable tbody");
 
-let subjectsList=[], teachersList=[], groupsList=[], classesData=[], instituteData={};
+let classesData = [];
+let selectedClass = null;
+let studentsData = [];
 
-// 🔑 التحقق من تسجيل الدخول
-onAuthStateChanged(auth, async (user) => {
-  if (!user) {
-    window.location.href = "login.html";
-    return;
+onAuthStateChanged(auth, async user => {
+  if (!user) window.location.href="login.html";
+  else {
+    document.body.style.visibility="visible";
+    await loadInstituteSettings();
+    await loadClasses();
   }
-  document.body.style.visibility = "visible";
-
-  await loadInstituteData();
-  await loadSubjectsTeachersGroups();
-  await loadClasses();
 });
 
-// تحميل بيانات المعهد
-async function loadInstituteData(){
-  const settingsSnap = await getDocs(collection(db,"settings"));
-  settingsSnap.forEach(docSnap=>{
-    instituteData = docSnap.data();
-    document.getElementById("instituteName").textContent = instituteData.name || "اسم المعهد";
-    document.getElementById("instituteLogo").src = instituteData.logo || "";
-  });
+async function loadInstituteSettings() {
+  const docSnap = await getDoc(doc(db,"settings","institute"));
+  if(docSnap.exists()){
+    const data = docSnap.data();
+    instituteName.textContent = data.name || "المعهد";
+    instituteLogo.src = data.logo || "";
+    document.body.style.setProperty("--primary-color", data.primaryColor || "#004aad");
+  }
 }
 
-// تحميل المواد، الأساتذة، المجموعات
-async function loadSubjectsTeachersGroups(){
-  subjectsList = [];
-  teachersList = [];
-  groupsList = [];
-
-  const studentsSnap = await getDocs(collection(db,"students"));
-  const subjectsSet = new Set();
-  const groupsSet = new Set();
-  studentsSnap.forEach(s=>{
-    s.data().subjects?.forEach(sub=>subjectsSet.add(sub.name));
-    if(s.data().group) groupsSet.add(s.data().group);
-  });
-  subjectsList = [...subjectsSet];
-  groupsList = [...groupsSet];
-
-  const teachersSnap = await getDocs(collection(db,"teachers"));
-  teachersSnap.forEach(t=>{teachersList.push({id:t.id,...t.data()});});
-
-  // تعبئة القوائم
-  subjectsList.forEach(sub=>{filterSubject.innerHTML += `<option value="${sub}">${sub}</option>`;});
-  teachersList.forEach(t=>{filterTeacher.innerHTML += `<option value="${t.id}">${t.name}</option>`;});
-  groupsList.forEach(g=>{filterGroup.innerHTML += `<option value="${g}">${g}</option>`;});
-}
-
-// تحميل الحصص
-async function loadClasses(filter={}){
-  const snapshot = await getDocs(collection(db,"classes"));
-  tableBody.innerHTML = "";
+async function loadClasses() {
   classesData = [];
-
+  const snapshot = await getDocs(collection(db,"classes"));
+  classSelect.innerHTML = "<option value=''>اختر الحصة</option>";
   snapshot.forEach(docSnap=>{
-    const cls = {id: docSnap.id, ...docSnap.data()};
-    if((!filter.subject || cls.subject===filter.subject) &&
-       (!filter.teacher || cls.teacherId===filter.teacher) &&
-       (!filter.group || cls.group===filter.group) &&
-       (!filter.day || cls.day===filter.day)){
-      classesData.push(cls);
-    }
+    const cls = {id:docSnap.id,...docSnap.data()};
+    classesData.push(cls);
+    classSelect.innerHTML += `<option value="${cls.id}">${cls.subject} - ${cls.group} - ${cls.day} ${cls.startTime}</option>`;
   });
+}
 
-  // ترتيب حسب اليوم والوقت
-  const daysOrder = ["الاثنين","الثلاثاء","الأربعاء","الخميس","الجمعة","السبت","الأحد"];
-  classesData.sort((a,b)=>{
-    const dayDiff = daysOrder.indexOf(a.day) - daysOrder.indexOf(b.day);
-    if(dayDiff!==0) return dayDiff;
-    return a.startTime.localeCompare(b.startTime);
-  });
+classSelect.addEventListener("change", async ()=>{
+  const classId = classSelect.value;
+  if(!classId) return attendanceTableBody.innerHTML="";
+  selectedClass = classesData.find(c=>c.id===classId);
+  await loadStudents(selectedClass);
+});
 
-  // عرض الحصص
-  classesData.forEach(cls=>{
-    const teacherName = (teachersList.find(t=>t.id===cls.teacherId)||{}).name || "غير معروف";
-    const studentCells = cls.students.map(st=>{
-      const status = cls.attendance.find(a=>a.id===st.id)?.status || "";
-      return `<div>
-        ${st.name}
-        <select class="status-select" data-class="${cls.id}" data-student="${st.id}">
-          <option value="">-</option>
-          <option value="حاضر" ${status==="حاضر"?"selected":""}>حاضر</option>
-          <option value="غائب" ${status==="غائب"?"selected":""}>غائب</option>
-          <option value="متأخر" ${status==="متأخر"?"selected":""}>متأخر</option>
-        </select>
-      </div>`;
-    }).join("");
+async function loadStudents(cls) {
+  attendanceTableBody.innerHTML="";
+  studentsData = cls.students || [];
+  studentsData.forEach(st=>{
     const tr = document.createElement("tr");
     tr.innerHTML = `
-      <td style="background:${instituteData.colors?.subjectColor||'#eef4ff'}">${cls.subject}</td>
-      <td>${teacherName}</td>
-      <td>${cls.group}</td>
-      <td>${cls.day}</td>
-      <td>${cls.startTime}</td>
-      <td>${cls.endTime}</td>
-      <td>${studentCells}</td>
-    `;
-    tableBody.appendChild(tr);
-  });
-
-  // إضافة حدث حفظ التغييرات على الطلاب
-  document.querySelectorAll(".status-select").forEach(sel=>{
-    sel.addEventListener("change", async e=>{
-      const classId = sel.dataset.class;
-      const studentId = sel.dataset.student;
-      const value = sel.value;
-
-      const clsRef = doc(db,"classes",classId);
-      const clsData = classesData.find(c=>c.id===classId);
-      const attendance = clsData.attendance.filter(a=>a.id!==studentId);
-      if(value) attendance.push({id: studentId, status:value});
-      await updateDoc(clsRef,{attendance});
-      clsData.attendance = attendance;
-    });
+      <td>${st.name}</td>
+      <td>
+        <select data-student-id="${st.id}">
+          <option value="present">حاضر</option>
+          <option value="absent">غائب</option>
+          <option value="late">متأخر</option>
+        </select>
+      </td>`;
+    attendanceTableBody.appendChild(tr);
   });
 }
 
-// تطبيق الفلتر
-filterBtn.addEventListener("click", ()=>{ 
-  loadClasses({
-    subject: filterSubject.value,
-    teacher: filterTeacher.value,
-    group: filterGroup.value,
-    day: filterDay.value
+saveBtn.addEventListener("click", async ()=>{
+  if(!selectedClass) return alert("اختر حصة أولا");
+  const attendanceUpdates = [];
+  attendanceTableBody.querySelectorAll("select").forEach(sel=>{
+    const studentId = sel.dataset.studentId;
+    attendanceUpdates.push({studentId, status: sel.value});
   });
+  await setDoc(doc(db,"attendance",selectedClass.id),{
+    classId: selectedClass.id,
+    students: attendanceUpdates,
+    updatedAt: new Date().toISOString()
+  });
+  alert("تم حفظ الحضور بنجاح ✅");
 });
 
-// طباعة التقرير
 printBtn.addEventListener("click", ()=>{
   window.print();
 });
-
 </script>
 </body>
 </html>
